--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
 
   <div class="centered">
     <p>
-      Letterspace is simply a celebration of letterform in everyday spaces, founded by designer and educator, Lucy Biggs.
+      Letterspace is simply a celebration of letterform in everyday spaces, founded by designer and educator, Lucy Biggs, senior lecturer at Manchester School of Art.
     </p>
 
     <p>
@@ -45,15 +45,15 @@
     </p>
 
     <p>
-      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by print maker, Dan Mather, in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of Slater Harrison.
+      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by print maker, Dan Mather, in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>.
     </p>
 
     <p>
-      In addition, a full set of the 26 letters will be auctioned at The Whitworth in April 2018, with all proceeds donated to two charities; Mustard Tree in Manchester and Printed by Us in Sheffield. Remaining posters will also be available to buy at The Whitworth event and online from April 2018.
+      In addition, a full Letterspace alphabet, made up of 26 posters, will be auctioned at The Whitworth, with proceeds gifted to two charities; <a href="http://www.mustardtree.org.uk" target="_blank">Mustard Tree</a> in Manchester and <a href="http://www.printedbyus.org" target="_blank">Printed by Us</a> in Sheffield. Remaining posters will be available to buy at The Whitworth event and online.
     </p>
 
     <p>
-      Letterspace has also been kindly supported by Dalton Maag who have gifted the use of their typeface, Effra, used for the Letterspace logo.
+      Letterspace has also been kindly supported by <a href="http://www.daltonmaag.com" target="_blank">Dalton Maag</a> who have gifted the use of their typeface, Effra, which is present throughout the Letterspace identity.
     </p>
 
   </div>
