--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,9 +67,9 @@
             <h4>Kindly supported by</h4>
 
             <ul>
-              <li><%= image_tag('sh_gray.png') %></li>
+              <li><%= image_tag('sh_colour.png') %></li>
               <li><%= image_tag('dm_logo.png') %></li>
-              <li><%= image_tag('mmu_gray.png') %></li>
+              <li><%= image_tag('mmu_black.png') %></li>
             </ul>
           </div>
 
@@ -87,10 +87,10 @@
 
             <div class="grid_6 omega">
                 <ul>
-                  <li class="social_btn"><%= image_tag('instagram.png') %></li>
-                  <li class="social_btn"><%= image_tag('twitter.png') %></li>
+                  <li class="social_btn"><a href="http://www.instagram.com/letterspace_" target="_blank"><%= image_tag('instagram.png') %></a></li>
+                  <li class="social_btn"><a href="http://www.twitter.com/letterspace_" target="_blank"><%= image_tag('twitter.png') %></a></li>
                   <!-- <li class="social_btn"><%= image_tag('facebook.png') %></li> -->
-                  <li>letterspace_</li>
+                  <li><a href="http://www.instagram.com/letterspace_" target="_blank">letterspace_</a></li>
                 </ul>
             </div>
 
