--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -7,9 +7,9 @@
 
     <ul>
       <li>Contact Lucy on:</li>
-      <li>hello@letterspace.co.uk</li>
+      <li><a href="mailto:hello@letterpace.co.uk">hello@letterspace.co.uk</a></li>
       <li>+44 (0)7701008030</li>
-      <li>@letterspace_</li>
+      <li><a href="http://www.instagram.com/letterspace_" target="_blank">@letterspace_</a></li>
     </ul>
   </div>
 </div>
