--- a/app/views/pages/thanks.html.erb
+++ b/app/views/pages/thanks.html.erb
@@ -1,5 +1,5 @@
 <div class="grid_12" id="thanks">
   <div class="centered">
-    <h2>Thank you! We'll keep you posted.</h2>
+    <p>Thank you! We'll keep you posted.</p>
   </div>
 </div>
