--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,8 @@
-<h2>Products</h2>
+<div class="grid_12" id="shop_index">
+  <div class="centered">
+    <p>
+      From April 2018, the Letterspace shop will sell all 26 posters of the Letterspace alphabet.
+      Keep an eye on <a href="http://www.twitter.com/letterspace_" target="_blank">Twitter</a> and <a href="http://www.instagram.com/letterspace_" target="_blank">Instagram</a> <a href="http://www.instagram.com/letterspace_" target="_blank">@Letterspace_</a> for updates.
+    </p>
+  </div>
+</div>
