--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <div class="logobg">
           <div class="centered">
             <div class="mainlogo">
-              <h1>LETTERSPACE</h1>
+              <h1><%= link_to "LETTERSPACE", root_path %></h1>
             </div>
           </div>
         </div>
