--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-      26 designers are currently working to create the inaugural Letterspace alphabet spanning spaces across the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented both in Manchester city centre and at The Whitworth in April 2018.
+      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented both in Manchester city centre and at The Whitworth in April 2018.
     </p>
 
     <p>
