--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
                   <li class="social_btn"><a href="http://www.instagram.com/letterspace_" target="_blank"><%= image_tag('instagram.png') %></a></li>
                   <li class="social_btn"><a href="http://www.twitter.com/letterspace_" target="_blank"><%= image_tag('twitter.png') %></a></li>
                   <!-- <li class="social_btn"><%= image_tag('facebook.png') %></li> -->
-                  <li><a href="http://www.instagram.com/letterspace_" target="_blank">letterspace_</a></li>
+                  <li><a href="http://www.instagram.com/letterspace_" target="_blank">@letterspace_</a></li>
                 </ul>
             </div>
 
