Changed homepage link

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -45,7 +45,7 @@
     </p>
 
     <p>
-      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by print maker, Dan Mather, in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>.
+      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by print maker, <a href="http://www.danmatherscreenprint.co.uk" target="_blank">Dan Mather Screenprint</a>, in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>.
     </p>
 
     <p>
