Updated all the sponsor logos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,11 +66,24 @@
           <div class="centered">
             <h4>Kindly supported by</h4>
 
-            <ul>
-              <li><%= image_tag('sh_colour.png') %></li>
-              <li><%= image_tag('dm_logo.png') %></li>
-              <li><%= image_tag('mmu_black.png') %></li>
-            </ul>
+            <div id="sponsor_box" class="grid_12">
+              <div class="grid_3 alpha">
+                <%= image_tag('sh_colour.png') %>
+              </div>
+
+              <div class="grid_3">
+                <%= image_tag('dm_logo.png') %>
+              </div>
+
+              <div class="grid_3">
+                <%= image_tag('mmu_black.png') %>
+              </div>
+
+              <div class="grid_3 omega">
+                <%= image_tag('dan_black.png') %>
+              </div>
+            </div>
+
           </div>
 
         </div>
