--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -167,7 +167,7 @@ nav li a { color: $fourth-color; }
 #sponsors { background-color: $primary-color;
 	h4 { color: $eighth-color; margin-top: 2.5%; }
 	ul { padding: 5% 0%; }
-	li { display: inline-block; margin-right: 10%; }
+	li { display: inline-block; margin-right: 5%; background-color: red; padding-top: 1%; }
 }
 
 /* Content */
@@ -255,6 +255,10 @@ nav li a { color: $fourth-color; }
 
 a:active { color: $fifth-color !important; }
 #shop_index { padding-bottom: 5%; }
+
+#sponsor_box { padding: 5% 0%; text-align: center;
+	img { width: 90%; }
+}
 
 /* Media Queries / Break Points */
 
@@ -347,7 +351,7 @@ a:active { color: $fifth-color !important; }
 	}
 	#sponsors {
 		h4 { margin: 10%; }
-		li { width: 50%; margin-bottom: 10%; }
+		img { width: 50%; margin-bottom: 10%; }
 	}
 	.social_btn { width: 10% !important; }
 	#thanks h2 { font-size: 1em; /* 16px */ }
