--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Letterspace is simply a celebration of letterform in everyday spaces, founded by designer and educator, Lucy Biggs.">
+    <meta name="keywords" content="letterspace, lucy biggs, graphic design, manchester, manchester school of art, typography, alphabet, letters, lettering">
+    <meta name="google-site-verification" content="f3qUsYp1hmB6KJsUsOwNQL8NBB7y7NvfYL4Uk03kj0k" />
 
     <title><%= content_for?(:title) ? yield(:title) : "Letterspace" %></title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f0f0f0">
+    <meta name="theme-color" content="#ffffff">
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
