Copy and sponsor logo alterations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
               </div>
 
               <div class="grid_3 omega">
-                <%= image_tag('dan_black.png') %>
+                <%= image_tag('blush_black.png') %>
               </div>
             </div>
 
