--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented both in Manchester city centre and at The Whitworth in April 2018.
+      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented at The Whitworth on 5th April 2018.
     </p>
 
     <p>
@@ -53,7 +53,7 @@
     </p>
 
     <p>
-      Letterspace has also been kindly supported by <a href="http://www.daltonmaag.com" target="_blank">Dalton Maag</a> who have gifted the use of their typeface, Effra, which is present throughout the Letterspace identity.
+      Letterspace has also been kindly supported by <a href="http://www.blushpublishing.co.uk/" target="_blank">Blush</a> who are involved with the Whitworth event and <a href="http://www.daltonmaag.com" target="_blank">Dalton Maag</a> who have gifted the use of their typeface, Effra, which is present throughout the Letterspace identity.
     </p>
 
   </div>
