Updated the home page copy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented at The Whitworth on 5th April 2018.
+      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented at The Whitworth on 19th April 2018.
     </p>
 
     <p>
@@ -45,7 +45,7 @@
     </p>
 
     <p>
-      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by <a href="http://www.danmatherscreenprint.co.uk" target="_blank">Dan Mather Screenprint</a> in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>.
+      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by <a href="http://www.danmatherscreenprint.co.uk" target="_blank">Dan Mather Screenprint</a> in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>, in partnership with Debbie Wigglesworth of The Paper Collaborative.
     </p>
 
     <p>
