Updated home page copy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,19 +33,19 @@
 
   <div class="centered">
     <p>
-      Letterspace is simply a celebration of letterform in everyday spaces, founded by designer and educator, Lucy Biggs, senior lecturer at Manchester School of Art.
+      Letterspace is a celebration of letterform in everyday spaces, founded and curated by designer and educator, Lucy Biggs, senior lecturer at Manchester School of Art.
     </p>
 
     <p>
-      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented at The Whitworth on 19th April 2018.
+      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented at <a href="https://www.eventbrite.co.uk/e/thursday-lates-letterspace-tickets-41997052314" target="_blank">The Whitworth on 19th April 2018</a>.
     </p>
 
     <p>
-      The alphabet will form the basis of educational workshops with schools throughout the North West of England with the aim of inspiring the next generation to study art and design at a higher level.
+      The alphabet will form the basis of a workshop day for 40 Key Stage 3 students from schools in the Manchester area, with the aim of inspiring the next generation to study art and design at a higher level.
     </p>
 
     <p>
-      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by <a href="http://www.danmatherscreenprint.co.uk" target="_blank">Dan Mather Screenprint</a> in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>, in partnership with Debbie Wigglesworth of The Paper Collaborative.
+      Each of the 26 letters will be screen printed as a limited edition of 26 by <a href="http://www.danmatherscreenprint.co.uk" target="_blank">Dan Mather Screenprint</a> in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>, in partnership with Debbie Wigglesworth of The Paper Collaborative.
     </p>
 
     <p>
@@ -53,7 +53,7 @@
     </p>
 
     <p>
-      Letterspace has also been kindly supported by <a href="http://www.blushpublishing.co.uk/" target="_blank">Blush</a> who are involved with the Whitworth event and <a href="http://www.daltonmaag.com" target="_blank">Dalton Maag</a> who have gifted the use of their typeface, Effra, which is present throughout the Letterspace identity.
+      Letterspace has also been kindly supported by Manchester School of Art, <a href="http://www.blushpublishing.co.uk/" target="_blank">Blush</a>, <a href="https://www.alphabetbrewing.co.uk/" target="_blank">Alphabet Brewing Company</a> and <a href="http://www.daltonmaag.com" target="_blank">Dalton Maag</a> who have gifted the use of their typeface, Effra, which is present throughout the Letterspace identity.
     </p>
 
   </div>
