--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -247,7 +247,7 @@ nav li a { color: $fourth-color; }
 #author_info_box { padding: 5% 0;
 	h2, p { font-family: $font-medium; }
 }
-#show_description { padding-top: 2.5%; }
+.show_description { padding-top: 2.5%; }
 #show_button { font-family: $font-medium; background-color: $fifth-color; color: $fourth-color; }
 #contact_page { padding: 0% 0% 20% 3%;
 	li { font-size: 1.75em; /* 28px */ line-height: 1.7; }
@@ -259,6 +259,20 @@ a:active { color: $fifth-color !important; }
 #sponsor_box { padding: 5% 0%; text-align: center;
 	img { width: 90%; }
 }
+
+#next_letter_box {
+	padding: 5% 0%;
+
+	li { display: inline-block; border-bottom: 1px solid; }
+	li:first-child {margin-right: 5%; }
+}
+
+.show_box {
+	width: 50%;
+	margin: 0 auto;
+}
+
+
 
 /* Media Queries / Break Points */
 
