Removed the show page image for now

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,9 +3,14 @@
 
   <div id="show_image_box" class="grid_12">
 
+<!--
     <div class="show_box">
       <%= image_tag ('a.jpg') %>
     </div>
+-->
+    <p>
+        Coming soon
+    </p>
 
   </div>
 
