--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -252,25 +252,17 @@ nav li a { color: $fourth-color; }
 #contact_page { padding: 0% 0% 20% 3%;
 	li { font-size: 1.75em; /* 28px */ line-height: 1.7; }
 }
-
 a:active { color: $fifth-color !important; }
 #shop_index { padding-bottom: 5%; }
-
 #sponsor_box { padding: 5% 0%; text-align: center;
 	img { width: 90%; }
 }
-
-#next_letter_box {
-	padding: 5% 0%;
-
+#next_letter_box { padding: 5% 0%;
 	li { display: inline-block; border-bottom: 1px solid; }
 	li:first-child {margin-right: 5%; }
 }
+.show_box, .product_image { width: 50%; margin: 0 auto; }
 
-.show_box {
-	width: 50%;
-	margin: 0 auto;
-}
 
 
 
