--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,8 +28,8 @@
       </p>
     </div>
 
-    <div id="show_button" class="button">
-      <%= link_to "GO TO SHOP", products_path %>
+    <div class="button show_button">
+      <%= link_to "GO TO THE SHOP", products_path %>
     </div>
   </div>
 
