--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -37,8 +37,8 @@
               <h3>£<%= product.price %> <span class="small">+ P&P</span></h3>
             </div>
 
-            <div class="button show_button">
-              <%= link_to "BUY", root_path %>
+            <div class="paypal_button">
+              <%== product.paypal_button %>
             </div>
 
           </div>
