Styled the paypal button

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -269,7 +269,7 @@ a:active { color: $fifth-color !important; }
 .shop_item_box { margin-bottom: 5%;
 	li { line-height: 1.7;}
 }
-
+.paypal_button { margin: 2.5% 0%; }
 
 
 
