Added paperclip file uploads

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -270,7 +270,7 @@ a:active { color: $fifth-color !important; }
 	li { line-height: 1.7;}
 }
 .paypal_button { margin: 2.5% 0%; }
-
+.no_image { padding-top: 50%; }
 
 
 
