Re-sized the product show page p tag on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -373,5 +373,6 @@ a:active { color: $fifth-color !important; }
 	#outer-box  { padding-top: 10%; }
 	#contact li { margin-bottom: 10%; }
 	#featured { padding-bottom: 7.5%; }
+  .show_description p {font-size: 1em; }
 
 }
