--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,6 @@
     <meta name="theme-color" content="#ffffff">
 
     <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
 
   </head>
@@ -126,6 +125,8 @@
     </div>
 
   </body>
+
+  <%= javascript_include_tag "application" %>
 
   <script>
     $(document).ready(function(){
