--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -11,5 +11,16 @@
       <li>+44 (0)7701008030</li>
       <li><a href="http://www.instagram.com/letterspace_" target="_blank">@letterspace_</a></li>
     </ul>
+
+    <p><button class="button" data-open="exampleModal1">Click me for a modal</button></p>
+
+    <div class="reveal" id="exampleModal1" data-reveal>
+      <h1>Awesome. I Have It.</h1>
+      <p class="lead">Your couch. It is mine.</p>
+      <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+      <button class="close-button" data-close aria-label="Close modal" type="button">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
   </div>
 </div>
