Changed the product image settings

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
 
           <div class="product_image">
             <% if product.image.present? %>
-              <%= image_tag(product.image(:medium)) %>
+              <%= image_tag(product.image) %>
             <% else %>
               <p class="no_image">
                 Image coming soon
