Added styling to the dashes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -279,6 +279,10 @@ a:active { color: $fifth-color !important; }
 
 	p { font-size: 1em; }
 }
+.shop_button { margin: 2.5% 0%; }
+.dash1:first-child { margin-bottom: 2.5%; }
+.dash1:last-child { margin-top: 2.5%; }
+
 
 
 /* Media Queries / Break Points */
