--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -270,6 +270,9 @@ a:active { color: $fifth-color !important; }
 .shop_item_box { margin-bottom: 5%;
 	li { line-height: 1.7;}
 }
+.product_text {
+  li { line-height: 1.7;}
+}
 .paypal_button { margin: 2.5% 0%; }
 .no_image { padding-top: 50%; }
 .delivery_info, .price { margin-top: 1%; }
