Added more margin to mobile shop

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -388,5 +388,6 @@ a:active { color: $fifth-color !important; }
 	#contact li { margin-bottom: 10%; }
 	#featured { padding-bottom: 7.5%; }
   .show_description p {font-size: 1em; }
+  .shop_item_box { margin-bottom: 25%; }
 
 }
