Resived the mobile shop images

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -389,5 +389,6 @@ a:active { color: $fifth-color !important; }
 	#featured { padding-bottom: 7.5%; }
   .show_description p {font-size: 1em; }
   .shop_item_box { margin-bottom: 25%; }
+	.product_image { width: 100%; margin-bottom: 5%; }
 
 }
